# ARC-Cache

./: CMakeLists.txt  README.md  run_test.sh
include/: arc.hpp  ideal.hpp  input.hpp  lru.hpp
source/: ideal.cpp  input.cpp  main.cpp  test_gen.cpp
